Strict compliance: remove non-format sections, archive deleted info, update character HTMLs and spec

--- a/html/feren-dax.html
+++ b/html/feren-dax.html
@@ -23,96 +23,175 @@
     </nav>
   </header>
   <main>
-  <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
-    <h2>Details</h2>
-    <ul>
-  <li><strong>Played by:</strong> Will</li>
-  <li><strong>Species:</strong> Tiefling</li>
-  <li><strong>Class(es):</strong> Warlock (level TBD) / Fighter (level TBD)</li>
-  <li><strong>Background:</strong> Criminal</li>
-  <li><strong>Patron:</strong> <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a></li>
-  <li><a href="feren-dax-sheet.html" class="sheet-link">View Feren Dax's Character Sheet</a></li>
-    </ul>
-    <div style="margin-bottom:4rem;"></div>
-    <h2>Backstory</h2>
-  <p>Feren Dax is a Tiefling Hexblade Warlock of <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>, born in Yusaf'hed, the city of pride and pleasure. Raised in the Silken Phoenix, a palace-brothel managed by his mother Velistra Dax, Feren received rigorous training in etiquette, swordplay, and politics. His best friend and sparring partner is Torri Spellguard. Feren's true magical calling awakened alone, outside the influence of the Phoenix, through the mysterious deity <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>. He leaves Yusaf'hed as an adult, returning annually for brief visits. Feren presents as charming and elegant but is internally conflicted about his legacy and home. Birthday: Mirtul 8th.</p>
-
-    <h2>Magic Items</h2>
-    <ul>
-      <li><strong>Single-Use Featherfall Ring:</strong> Allows a one-time use of the Featherfall spell.</li>
-      <li><strong>Weapon Focus Feature:</strong> As a special action, using this weapon as a focus grants an additional Eldritch Blast.</li>
-      <li><strong>Ring of Parallel Minds:</strong> Silver ring with two parallel, glowing gemstones. Lets an attuned Warlock (level 7+, with at least one 4th-level spell) concentrate on two spells at once. <br>
-        <em>Drawbacks:</em>
-        <ul>
-          <li>While concentrating on two spells, must make a DC 15 Constitution save at the start of each turn.</li>
-          <li>On failure, roll 1d6 (or DM chooses) for magical mishaps (backlash, surge, confusion, exhaustion, spell lockout, etc).</li>
-          <li>Any effect that would disrupt concentration has a 20% chance to trigger a magical resonance effect.</li>
-        </ul>
-        <em>Restrictions:</em> Only for concentration spells. Only attunable by qualifying Warlocks. DM determines exact resonance effects for added unpredictability.
-      </li>
-      <li><strong>Rod of Absorption:</strong> Stores spell slots (1st level = 1 slot).</li>
-  <li><strong>Solaris' Lucky Coin:</strong> Grants one "perfect roll" (Nat 20 or max attack hit/damage). After use, becomes a regular gold coin (1gp).</li>
-    </ul>
-
-    <h2>Family & Key Relationships</h2>
-    <ul>
-  <li><strong>Velistra Dax ("The Velvet Whisper of Yusaf'hed"):</strong> Matron and mistress of the Silken Phoenix. Commands respect through presence and principle, not cruelty. Teaches Feren not everyone who seeks your fire deserves to hold it. <br>
-        <em>Details for RP/Art:</em> Never rushes, glides into rooms. Warm, low musical voice; smiles must be earned. Impeccable posture, graceful gestures. Wears a keepsake ring on a chain, tiny bell earrings, sometimes carries a fan. Shadow flickers when alone (hinting at an old infernal pact).</li>
-  <li><strong>Torri Spellguard ("The Magebreaker of Yusaf'hed"):</strong> Daughter of a seamstress at the Silken Phoenix. Quiet, earnest, and unassuming; magic recoils from her presence. Supported and mentored by Velistra, trained with Feren. Prefers utility over recognition, now a humble pillar of the city guard. Known for neutralizing magic ("Magebreaker"). Maintains a close friendship with Feren, always greeting him first on his return, providing support without fanfare.</li>
-    </ul>
-
-    <h2>Magical Companion: Mika</h2>
-    <ul>
-      <li><strong>Type:</strong> Celestial (Tiny)</li>
-      <li><strong>Ancient Magic Fortitude:</strong> If Mika is reduced to 0 hit points (not by a critical hit), she can make a Constitution saving throw (DC = damage taken − 5). On a success, she drops to 1 hit point instead. If she still drops to 0, she disappears until after a long rest.</li>
-  <li><strong>Cute Overload:</strong> Mika's cuteness overwhelms those around her, granting Feren +5 Charisma if within 10 feet of Mika.</li>
-  <li><strong>Healer's Light (1/long rest):</strong> Mika chooses a creature within 15 feet and flares with invigorating light. The target gains 1d8 + Proficiency Bonus temporary hit points.</li>
-      <li>If Mika is reduced to 0 hit points: She disappears until after a long rest.</li>
-    </ul>
-
-  <h2>Familiar: Hime ("Princess")</h2>
-    <ul>
-      <li>Small, three-tailed white fox spirit with blue-tipped ears and tails, wears a dark rose ribbon with a golden bell.</li>
-      <li>Eyes: Deep amber flecked with gold.</li>
-      <li>Personality: Quietly proud, communicates telepathically with a regal, commanding tone.</li>
-      <li>Not a pet, but a familiar chosen through mutual bond with Feren.</li>
-      <li>Cannot be truly killed; spirit returns to the ethereal planes if physical form is destroyed.</li>
-  <li>Symbolizes Feren's self-determined path and struggles with immortality.</li>
-      <li>Personal note: Can be difficult if denied her wishes.</li>
-    </ul>
-
-    <h2>Setting & Lore</h2>
-    <ul>
-  <li><strong>The Silken Phoenix:</strong> Establishment run by Velistra Dax in Yusaf'hed. Sanctuary of refinement; suitors must be deemed worthy. Center of etiquette, politics, and social maneuvering.</li>
-  <li><strong>City of Yusaf'hed:</strong> Capital of pride and pleasure; reputation and legacy are paramount. Known as the City of Sun and Moon (Palace = Sol, Temple = Luna). Feren, Milicia, and Yo are heading to the temple. Biggus encountered a Micean (dragon/human overlay, appears as dark-skinned humanoid). Party is temporally displaced, currently 1500+ years in the past.</li>
-  <li><strong>The Golden City (Story from "The Golden City By The Oracle"):</strong> Exists beyond time, bathed in eternal light. Priestesses of Sun (Aurelia) and Moon (Selene) share a transcendent bond. Harmony disrupted by the arrival of Eldricus (creation/order) and Sucirdle (chaos/disorder). Represents cosmic balance and duality.</li>
-    </ul>
-
-    <h2>Miscellaneous</h2>
-    <ul>
-  <li>Feren's birthday: Mirtul 8th, with a tradition of drunken celebration.</li>
-  <li>Book: "The Golden City By The Oracle" shows a magical, hidden story readable only by rune keepers and vanishes after reading.</li>
-  <li>Feren and Torri's friendship is rooted in shared training and mutual support, rather than dramatic events.</li>
-    </ul>
-    <h2>Notable Abilities & Features</h2>
-    <ul>
-      <li>Eldritch magic from Warlock pact</li>
-      <li>Martial prowess from Fighter training</li>
-      <li>Deceptive and persuasive skills</li>
-      <li>Streetwise and resourceful</li>
-    </ul>
-    <h2>Patron/Deity</h2>
-  <p>Feren's patron is <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>, a mysterious deity whose influence is evident in Feren's growing magical abilities and unique path as a Hexblade Warlock.</p>
-    <h2>Story Moments</h2>
-    <ul>
-      <li>Escaped capture by city guards using magic and guile</li>
-      <li>Brokered a deal between rival merchants</li>
-      <li>Rescued a child from a burning building</li>
-    </ul>
+    <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
+    <section>
+      <h2>Details</h2>
+      <ul>
+        <li><strong>Played by:</strong> Will</li>
+        <li><strong>Species:</strong> Tiefling</li>
+        <li><strong>Class & Level:</strong> Warlock 7 (Hexblade) / Fighter 3 — Level 10</li>
+        <li><strong>Background:</strong> Criminal</li>
+        <li><strong>Alignment:</strong> Chaotic Good</li>
+        <li><strong>Patron:</strong> <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a></li>
+        <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> [Not listed] &nbsp; <strong>Initiative:</strong> [Not listed] &nbsp; <strong>Inspiration:</strong> [Not listed]</li>
+        <li><strong>Coins:</strong> [Not listed]</li>
+        <li><a href="feren-dax-sheet.html" class="sheet-link">View Feren Dax's Character Sheet</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Ability Scores & Saving Throws</h2>
+      <ul>
+        <li><strong>STR:</strong> 12 (+1), Save: +1</li>
+        <li><strong>DEX:</strong> 18 (+4), Save: +4</li>
+        <li><strong>CON:</strong> 14 (+2), Save: +2</li>
+        <li><strong>INT:</strong> 16 (+3), Save: +3</li>
+        <li><strong>WIS:</strong> 16 (+3), Save: +7</li>
+        <li><strong>CHA:</strong> 25 (+7), Save: +11</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Class Breakdown</h2>
+      <ul>
+        <li><strong>Warlock 7</strong> (Hexblade, Spellcasting: Charisma, Hit Die: 1d8, Cantrips: 3, Spells Known: 8)</li>
+        <li><strong>Fighter 3</strong> (Eldritch Knight, Spellcasting: Intelligence, Hit Die: 1d10)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Backstory</h2>
+      <p>Feren Dax is a Tiefling Hexblade Warlock of <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>, born in Yusaf'hed, the city of pride and pleasure. Raised in the Silken Phoenix, a palace-brothel managed by his mother Velistra Dax, Feren received rigorous training in etiquette, swordplay, and politics. His best friend and sparring partner is Torri Spellguard. Feren's true magical calling awakened alone, outside the influence of the Phoenix, through the mysterious deity Alobal. He leaves Yusaf'hed as an adult, returning annually for brief visits. Feren presents as charming and elegant but is internally conflicted about his legacy and home. Birthday: Mirtul 8th.</p>
+    </section>
+    <section>
+      <h2>Companions</h2>
+      <h3>Magical Companion: Mika</h3>
+      <ul>
+        <li><strong>Type:</strong> Celestial (Tiny)</li>
+        <li><strong>Ancient Magic Fortitude:</strong> If Mika is reduced to 0 hit points (not by a critical hit), she can make a Constitution saving throw (DC = damage taken − 5). On a success, she drops to 1 hit point instead. If she still drops to 0, she disappears until after a long rest.</li>
+        <li><strong>Cute Overload:</strong> Mika’s cuteness overwhelms those around her, granting Feren +5 Charisma if within 10 feet of Mika.</li>
+        <li><strong>Healer’s Light (1/long rest):</strong> Mika chooses a creature within 15 feet and flares with invigorating light. The target gains 1d8 + Proficiency Bonus temporary hit points.</li>
+        <li>If Mika is reduced to 0 hit points: She disappears until after a long rest.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Family & Key Relationships</h2>
+      <ul>
+        <li><strong>Velistra Dax (“The Velvet Whisper of Yusaf’hed”):</strong> Matron and mistress of the Silken Phoenix. Commands respect through presence and principle, not cruelty. Teaches Feren not everyone who seeks your fire deserves to hold it. Never rushes, glides into rooms. Warm, low musical voice; smiles must be earned. Impeccable posture, graceful gestures. Wears a keepsake ring on a chain, tiny bell earrings, sometimes carries a fan. Shadow flickers when alone (hinting at an old infernal pact).</li>
+        <li><strong>Torri Spellguard (“The Magebreaker of Yusaf’hed”):</strong> Daughter of a seamstress at the Silken Phoenix. Quiet, earnest, and unassuming; magic recoils from her presence. Supported and mentored by Velistra, trained with Feren. Prefers utility over recognition, now a humble pillar of the city guard. Known for neutralizing magic (“Magebreaker”). Maintains a close friendship with Feren, always greeting him first on his return, providing support without fanfare.</li>
+        <li><strong>Zara Dax (sister):</strong> Supportive and clever</li>
+        <li><strong>Cyndara Crossfire (ex-girlfriend):</strong> Friend and ally</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Party Relationships & Mentions</h2>
+      <ul>
+        <li>Feren is a core member of the party, traveling with Biggus Menethil, Milicia Valen, and Yo. Notable party connections and events include:</li>
+        <li><strong>Temple of Yusaf'hed:</strong> Journeyed with Milicia and Yo to the temple in Yusaf'hed, where the party (including Biggus) was temporally displaced over 1500 years into the past (see Setting & Lore, and Biggus's file).</li>
+        <li><strong>Party Dynamics:</strong> Feren is often the party's negotiator and magical expert, using his charisma and cunning to resolve conflicts. He shares a close working relationship with Biggus, mutual respect with Milicia, and a playful camaraderie with Yo.</li>
+        <li><strong>Cross-References:</strong>
+          <ul>
+            <li><a href="biggus-menethil.html">Biggus Menethil</a>: Trusted ally and frequent collaborator in party plans and rescues.</li>
+            <li><a href="milicia-valen.html">Milicia Valen</a>: Shares a sense of duty and protection for the group; both have strong convictions.</li>
+            <li><a href="yo.html">Yo</a>: Enjoys Yo's humor and adaptability; often partners on unconventional solutions.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Notable Abilities & Features</h2>
+      <ul>
+        <li>Eldritch magic from Warlock pact</li>
+        <li>Martial prowess from Fighter training</li>
+        <li>Deceptive and persuasive skills</li>
+        <li>Streetwise and resourceful</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Skills & Proficiencies</h2>
+      <ul>
+        <li>[Skills not listed]</li>
+        <li>Martial prowess from Fighter training</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Equipment</h2>
+      <ul>
+        <li>Single-Use Featherfall Ring</li>
+        <li>[Other equipment not listed]</li>
+        <li>Eldritch magic from Warlock pact</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Features & Traits</h2>
+      <ul>
+        <li>Hexblade Warlock abilities</li>
+        <li>Fighter training</li>
+        <li>[Other features not listed]</li>
+        <li>Deceptive and persuasive skills</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Bonds, Ideals & Flaws</h2>
+      <ul>
+        <li><strong>Bonds:</strong> [Not listed]</li>
+        <li><strong>Ideals:</strong> [Not listed]</li>
+        <li><strong>Flaws:</strong> [Not listed]</li>
+        <li>Streetwise and resourceful</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Magic Items</h2>
+      <ul>
+        <li><strong>Single-Use Featherfall Ring:</strong> Allows a one-time use of the Featherfall spell.</li>
+        <li><strong>Weapon Focus Feature:</strong> As a special action, using this weapon as a focus grants an additional Eldritch Blast.</li>
+        <li><strong>Ring of Parallel Minds:</strong> Silver ring with two parallel, glowing gemstones. Lets an attuned Warlock (level 7+, with at least one 4th-level spell) concentrate on two spells at once.
+          <ul>
+            <li>While concentrating on two spells, must make a DC 15 Constitution save at the start of each turn.</li>
+            <li>On failure, roll 1d6 (or DM chooses) for magical mishaps (backlash, surge, confusion, exhaustion, spell lockout, etc).</li>
+            <li>Any effect that would disrupt concentration has a 20% chance to trigger a magical resonance effect.</li>
+          </ul>
+          <em>Restrictions:</em> Only for concentration spells. Only attunable by qualifying Warlocks. DM determines exact resonance effects for added unpredictability.
+        </li>
+        <li><strong>Rod of Absorption:</strong> Stores spell slots (1st level = 1 slot).</li>
+        <li><strong>Solaris' Lucky Coin:</strong> Grants one "perfect roll" (Nat 20 or max attack hit/damage). After use, becomes a regular gold coin (1gp).</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Story Moments</h2>
+      <ul>
+        <li>Escaped capture by city guards using magic and guile</li>
+        <li>Brokered a deal between rival merchants</li>
+        <li>Rescued a child from a burning building</li>
+        <li>Book: “The Golden City By The Oracle” shows a magical, hidden story readable only by rune keepers and vanishes after reading.</li>
+        <li>Feren and Torri’s friendship is rooted in shared training and mutual support, rather than dramatic events.</li>
+        <li>Symbolizes Feren's self-determined path and struggles with immortality</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Setting & Lore</h2>
+      <ul>
+        <li><strong>The Silken Phoenix:</strong> Establishment run by Velistra Dax in Yusaf’hed. Sanctuary of refinement; suitors must be deemed worthy. Center of etiquette, politics, and social maneuvering.</li>
+        <li><strong>City of Yusaf’hed:</strong> Capital of pride and pleasure; reputation and legacy are paramount. Known as the City of Sun and Moon (Palace = Sol, Temple = Luna). Feren, Milicia, and Yo are heading to the temple. Biggus encountered a Mician (dragon/human overlay, appears as dark-skinned humanoid). Party is temporally displaced, currently 1500+ years in the past.</li>
+        <li><strong>The Golden City (Story from “The Golden City By The Oracle”):</strong> Exists beyond time, bathed in eternal light. Priestesses of Sun (Aurelia) and Moon (Selene) share a transcendent bond. Harmony disrupted by the arrival of Eldricus (creation/order) and Sucirdle (chaos/disorder). Represents cosmic balance and duality.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Family Tree & Lineage</h2>
+      <ul>
+        <li>(Details to be added)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Miscellaneous</h2>
+      <ul>
+        <li>Feren’s birthday: Mirtul 8th, with a tradition of drunken celebration.</li>
+        <li>Feren and Torri's friendship is rooted in shared training and mutual support</li>
+      </ul>
+    </section>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
+    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
-  <script src="../js/main.js"></script>
 </body>
 </html>
