--- a/html/yo.html
+++ b/html/yo.html
@@ -23,18 +23,66 @@
     </nav>
   </header>
   <main>
-  <img src="../assets/images/Yo.png" alt="Yo" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
+    <img src="../assets/images/Yo.png" alt="Yo" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
     <h2>Details</h2>
     <ul>
       <li><strong>Played by:</strong> Ryan</li>
       <li><strong>Species:</strong> Halfling (Stout)</li>
-      <li><strong>Class(es):</strong> Druid (level TBD) / Fighter (level TBD)</li>
+      <li><strong>Class & Level:</strong> Druid 5 (Circle of the Shepherd) / Fighter 5 (Gunslinger) — Level 10</li>
       <li><strong>Background:</strong> Folk Hero</li>
-  <li><a href="yo-sheet.html" class="sheet-link">View Yo's Character Sheet</a></li>
+      <li><strong>Alignment:</strong> [Not listed]</li>
+      <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> 18 &nbsp; <strong>Initiative:</strong> +5 &nbsp; <strong>Inspiration:</strong> 3</li>
+      <li><strong>Coins:</strong> 100 GP</li>
+      <li><a href="yo-sheet.html" class="sheet-link">View Yo's Character Sheet</a></li>
     </ul>
-    <div style="margin-bottom:4rem;"></div>
+    <div style="margin-bottom:2rem;"></div>
+    <h2>Appearance</h2>
+    <p>Small, sturdy halfling with a quick smile and nimble fingers. Wears practical clothes, often with a bit of mud or grass stain. Keeps a sling and a battered hat handy.</p>
+    <h2>Class Breakdown</h2>
+    <ul>
+      <li><strong>Druid 5</strong> (Circle of the Shepherd, Spellcasting: Wisdom, Hit Die: 1d8, Spells Prepared: 1)</li>
+      <li><strong>Fighter 5</strong> (Gunslinger, Hit Die: 1d10)</li>
+    </ul>
+    <h2>Party Relationships & Mentions</h2>
+    <ul>
+      <li>Yo is a cheerful and resourceful member of the party, traveling with Feren Dax, Biggus Menethil, and Milicia Valen. Notable party connections and events include:</li>
+      <li><strong>Temple of Yusaf'hed:</strong> Journeyed with Feren and Milicia to the temple in Yusaf'hed, where the party (including Biggus) was temporally displaced over 1500 years into the past (see Feren Dax's file, Setting & Lore).</li>
+      <li><strong>Party Dynamics:</strong> Yo brings optimism and quick thinking to the group, often lightening the mood and finding creative solutions. Shares a strong bond with Milicia, enjoys Biggus's practical skills, and admires Feren's magical prowess.</li>
+      <li><strong>Cross-References:</strong>
+        <ul>
+          <li><a href="biggus-menethil.html">Biggus Menethil</a>: Collaborates on survival and scouting; values Biggus's reliability.</li>
+          <li><a href="feren-dax.html">Feren Dax</a>: Looks up to Feren's confidence and magical abilities; often partners on unconventional plans.</li>
+          <li><a href="milicia-valen.html">Milicia Valen</a>: Finds inspiration in Milicia's courage and kindness; often receives encouragement and support.</li>
+        </ul>
+      </li>
+    </ul>
     <h2>Backstory</h2>
-    <p>N/A</p>
+    <p>Yo is a Stout Halfling who grew up in a small, close-knit village. Known for bravery and resilience, Yo became a local legend after saving the village from a natural disaster using quick thinking and druidic magic. Inspired by tales of adventure, Yo set out to explore the world, using nature magic and fighting skills to protect the innocent and uphold the values of the folk hero.</p>
+    <h2>Equipment</h2>
+    <ul>
+      <li>[Equipment not listed in XML]</li>
+    </ul>
+    <h2>Skills & Proficiencies</h2>
+    <ul>
+      <li>[Skills not listed in XML]</li>
+    </ul>
+    <h2>Features & Traits</h2>
+    <ul>
+      <li>Circle of the Shepherd (Druid)</li>
+      <li>Gunslinger (Fighter)</li>
+      <li>Gunner (Feat)</li>
+      <li>Wild Shape: Can transform into animals</li>
+      <li>Nature magic and healing</li>
+      <li>Bravery and resilience from Halfling heritage</li>
+      <li>Skilled with slings and simple weapons</li>
+      <li>[Other features not listed in XML]</li>
+    </ul>
+    <h2>Bonds, Ideals & Flaws</h2>
+    <ul>
+      <li><strong>Bonds:</strong> [Not listed]</li>
+      <li><strong>Ideals:</strong> [Not listed]</li>
+      <li><strong>Flaws:</strong> [Not listed]</li>
+    </ul>
     <h2>Notable Abilities & Features</h2>
     <ul>
       <li>Wild Shape: Can transform into animals</li>
@@ -43,12 +91,14 @@
       <li>Skilled with slings and simple weapons</li>
     </ul>
     <h2>Patron/Deity</h2>
-    <p>N/A</p>
-    <h2>Story Moments</h2>
     <ul>
       <li>N/A</li>
-      <li>N/A</li>
-      <li>N/A</li>
+    </ul>
+    <h2>Story Moments</h2>
+    <ul>
+      <li>Saved a village from disaster</li>
+      <li>Healed a wounded animal companion</li>
+      <li>Outwitted a band of marauders threatening the countryside</li>
     </ul>
   </main>
   <footer>
