--- a/html/biggus-menethil.html
+++ b/html/biggus-menethil.html
@@ -23,36 +23,108 @@
     </nav>
   </header>
   <main>
-  <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
-    <h2>Details</h2>
-    <ul>
-      <li><strong>Played by:</strong> Mike</li>
-      <li><strong>Species:</strong> Human (Variant)</li>
-      <li><strong>Class(es):</strong> Ranger (level TBD) / Rogue (level TBD)</li>
-      <li><strong>Background:</strong> Rune Carver</li>
-  <li><a href="biggus-menethil-sheet.html" class="sheet-link">View Biggus's Character Sheet</a></li>
-    </ul>
-    <div style="margin-bottom:4rem;"></div>
-    <h2>Backstory</h2>
-    <p>Biggus Menethil is a resourceful and determined human, known for his keen senses and adaptability. As a Rune Carver, he has a mysterious connection to ancient magical runes, which he uses to aid his party. His dual training as a Ranger and Rogue makes him both a skilled tracker and a master of stealth. Biggus is loyal to his friends and has a strong sense of justice, though he is not above bending the rules to achieve his goals.</p>
-    <h2>Notable Abilities & Features</h2>
-    <ul>
-      <li>Expert tracker and survivalist</li>
-      <li>Proficient with both ranged and melee weapons</li>
-      <li>Rune Carving: Can inscribe magical runes for various effects</li>
-      <li>Stealth and lockpicking skills from Rogue training</li>
-    </ul>
-    <h2>Patron/Deity</h2>
-  <p>Biggus's spiritual beliefs are private, but he respects the old ways and the power of ancient runes.</p>
-    <h2>Story Moments</h2>
-    <ul>
-      <li>Discovered a lost rune stone in the wilds</li>
-      <li>Saved the party from an ambush using clever traps</li>
-      <li>Negotiated a truce with a rival adventuring group</li>
-    </ul>
+    <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
+    <section>
+      <h2>Details</h2>
+      <ul>
+        <li><strong>Played by:</strong> Mike</li>
+        <li><strong>Species:</strong> Human (Variant)</li>
+        <li><strong>Class & Level:</strong> Ranger 6 (Beast Master) / Rogue 4 (Arcane Trickster) — Level 10</li>
+        <li><strong>Background:</strong> Rune Carver</li>
+        <li><strong>Alignment:</strong> Lawful Good</li>
+        <li><strong>Deity:</strong> The First One (spiritual beliefs are private, but he respects the old ways and the power of ancient runes)</li>
+        <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> 17 &nbsp; <strong>Initiative:</strong> [Not listed] &nbsp; <strong>Inspiration:</strong> [Not listed]</li>
+        <li><strong>Coins:</strong> 134 GP, 10 SP</li>
+        <li><a href="biggus-menethil-sheet.html" class="sheet-link">View Biggus's Character Sheet</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Class Breakdown</h2>
+      <ul>
+        <li><strong>Ranger 6</strong> (Beast Master, Spellcasting: Wisdom, Hit Die: 1d10, Spells Known: 5)</li>
+        <li><strong>Rogue 4</strong> (Arcane Trickster, Spellcasting: Intelligence, Hit Die: 1d8, Cantrips: 2)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Backstory</h2>
+      <p>Biggus Menethil is a resourceful and determined human, known for his keen senses and adaptability. As a Rune Carver, he has a mysterious connection to ancient magical runes, which he uses to aid his party. His dual training as a Ranger and Rogue makes him both a skilled tracker and a master of stealth. Biggus is loyal to his friends and has a strong sense of justice, though he is not above bending the rules to achieve his goals.</p>
+    </section>
+    <section>
+      <h2>Party Relationships & Mentions</h2>
+      <ul>
+        <li>Biggus is a founding member of the party, traveling alongside Feren Dax, Milicia Valen, and Yo. He has shared many adventures with them, including:</li>
+        <li><strong>Temple of Yusaf'hed:</strong> Traveled with Feren, Milicia, and Yo to the temple in the city of Yusaf'hed, where the party was temporally displaced over 1500 years into the past (see Feren Dax's file, Setting & Lore).</li>
+        <li><strong>Party Dynamics:</strong> Biggus is known for his loyalty and tactical thinking, often saving the party from ambushes and negotiating truces. He is respected by his companions for his resourcefulness and sense of justice.</li>
+        <li><strong>Cross-References:</strong>
+          <ul>
+            <li><a href="feren-dax.html">Feren Dax</a>: Frequent collaborator and friend; both have a knack for getting the party out of trouble.</li>
+            <li><a href="milicia-valen.html">Milicia Valen</a>: Shares a mutual respect for each other's sense of duty and protection of the innocent.</li>
+            <li><a href="yo.html">Yo</a>: Enjoys Yo's humor and quick thinking; often works together on survival and scouting tasks.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Notable Abilities & Features</h2>
+      <ul>
+        <li>Expert tracker and survivalist</li>
+        <li>Proficient with both ranged and melee weapons</li>
+        <li>Rune Carving: Can inscribe magical runes for various effects</li>
+        <li>Stealth and lockpicking skills from Rogue training</li>
+        <li>Beast Master (Ranger)</li>
+        <li>Arcane Trickster (Rogue)</li>
+        <li>Observant (Feat)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Skills & Proficiencies</h2>
+      <ul>
+        <li>[Skills not listed]</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Features & Traits</h2>
+      <ul>
+        <li>Beast Master (Ranger)</li>
+        <li>Arcane Trickster (Rogue)</li>
+        <li>Observant (Feat)</li>
+        <li>[Other features not listed]</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Bonds, Ideals & Flaws</h2>
+      <ul>
+        <li><strong>Bonds:</strong> Carves runes on a set of animal bones, used for divination and tactics</li>
+        <li><strong>Ideals:</strong> [Not listed]</li>
+        <li><strong>Flaws:</strong> [Not listed]</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Story Moments</h2>
+      <ul>
+        <li>Discovered a lost rune stone in the wilds</li>
+        <li>Saved the party from an ambush using clever traps</li>
+        <li>Negotiated a truce with a rival adventuring group</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Equipment</h2>
+      <ul>
+        <li>[Equipment not listed]</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Family Tree & Lineage</h2>
+      <ul>
+        <li>(Details to be added)</li>
+      </ul>
+    </section>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
+    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
