--- a/html/important-npcs.html
+++ b/html/important-npcs.html
@@ -24,13 +24,72 @@
   </header>
   <main>
     <section>
-      <h2>Key NPCs</h2>
+      <h2>Divine and Cosmic Hierarchy</h2>
       <ul>
-        <li>Headmaster Eldricus (The First One)</li>
-  <li>Velistra Dax (Feren's mother)</li>
-  <li>Torri Spellguard (Feren's childhood friend)</li>
-        <li>Niamh (avatar of Ceridwen)</li>
-        <li>Others as detailed in campaign</li>
+        <li><strong>Tsuki (The Mother of All Creation):</strong> The primordial being, creator of Aurelia and Selene, source of all existence.</li>
+        <li><strong>Selene (Priestess of the Moon):</strong> First creation of Tsuki, guardian of night and tranquility, mother of Eldricus.</li>
+        <li><strong>Aurelia (Priestess of the Sun):</strong> First creation of Tsuki, guardian of light and warmth, mother of Sucirdle.</li>
+        <li><strong>Eldricus (The Headmaster, The First One):</strong> Son of Selene, embodiment of order, creation, and cosmic law.</li>
+        <li><strong>Sucirdle:</strong> Son of Aurelia, embodiment of chaos and discord, leader of the Twelve rebellious gods.</li>
+      </ul>
+      <p><em>The Golden City:</em> A pocket dimension created by Tsuki, stage for the Betrayal and the Birth of the Gods.</p>
+    </section>
+    <section>
+      <h2>Other Divine and Cosmic Figures</h2>
+      <ul>
+        <li><strong>Ceridwen:</strong> Goddess of wisdom and learning, keeper of the Library of Ascendia.</li>
+        <li><strong>Alobal:</strong> Goddess of joy, freedom, and creative chaos. Patron of Feren Dax.</li>
+        <li><strong>Al (Alobal's Male Avatar):</strong> The male avatar of Alobal, appears to guide or test the party.</li>
+        <li><strong>Garamith (The Old Man):</strong> Once a Lovac to Cappo, a dragon player in Xorvintaal. Obsessed with forbidden knowledge and the urn.</li>
+      </ul>
+      <p><em>The Urn of Fate:</em> A cosmic artifact that could reset reality. The party's actions averted catastrophe in the current cycle.</p>
+    </section>
+    <section>
+      <h2>Dax Family and Associates</h2>
+      <ul>
+        <li><strong>Velistra Dax:</strong> Matron of the Silken Phoenix, Feren Dax's mother.</li>
+        <li><strong>Solaris Nova:</strong> Once human, partner to Velistra Dax, reborn in a Warforged body.</li>
+        <li><strong>Zara:</strong> Feren Dax's sister, involved in family and campaign events.</li>
+        <li><strong>Torri Spellguard:</strong> Feren Dax's childhood friend, city guard pillar.</li>
+        <li><strong>Cyndara Crossfire:</strong> Feren Dax's ex-girlfriend, now a friend and ally.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Notable Shopkeepers and Wanderers</h2>
+      <ul>
+        <li><strong>Lethagar (The Weird Shopkeeper):</strong> Eccentric shopkeeper, known for oddities and rare items. Inspired by Dr. Who.</li>
+        <li><strong>Goldarus (The Wandering Shopkeeper):</strong> Traveling merchant, appears when least expected.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Dragon Village NPCs (Planet Mogo, Realm of Creation)</h2>
+      <ul>
+        <li><strong>Ziggy:</strong> Youngest of the lead family, guide to the village.</li>
+        <li><strong>Earatas:</strong> Ziggy's mother, respected in the village.</li>
+        <li><strong>Anitoli:</strong> Ziggy's father, family leader.</li>
+        <li><strong>Tasha:</strong> Ziggy's eldest sister.</li>
+        <li><strong>Shindora:</strong> Ziggy's second sister.</li>
+        <li><strong>Hedara:</strong> Ziggy's third sister.</li>
+        <li><strong>Ilaundra:</strong> Ziggy's fourth sister.</li>
+        <li><strong>Tilly:</strong> Ziggy's youngest sister.</li>
+        <li><strong>Etu:</strong> Odd shop owner in the dragon village.</li>
+        <li><strong>Pilsy:</strong> Village baker, known for magical treats.</li>
+        <li><strong>Willy:</strong> Village weapon smith, crafts arms for dragons and visitors.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Milicia Valen's Direct Family</h2>
+      <ul>
+        <li><strong>Constance Belle:</strong> Milicia's mother, orc, missing since Milicia was 10.</li>
+        <li><strong>Ollie Tristan:</strong> Milicia's father, human.</li>
+        <li><strong>Maxwell Cruz:</strong> Eldest brother, fighter, heir.</li>
+        <li><strong>Maggie Spencer:</strong> Twin, mostly human.</li>
+        <li><strong>Maddison Lynn:</strong> Twin, mostly human.</li>
+        <li><strong>Maximilian Ioan:</strong> Bookish, sorcerer/wizard.</li>
+        <li><strong>Jaxson Nox:</strong> Druid.</li>
+        <li><strong>Macsen Pax:</strong> Bard.</li>
+        <li><strong>Mea Pearl:</strong> Tiefling, warlock.</li>
+        <li><strong>Morgan Tanix:</strong> Monk.</li>
       </ul>
     </section>
   </main>
