--- a/html/locations.html
+++ b/html/locations.html
@@ -25,7 +25,54 @@
   <main>
     <section>
       <h2>World & Setting Overview</h2>
-      <!-- Location content will go here -->
+      <p>This page lists all major campaign locations in chronological order, as they appear in the campaign timeline. Each location includes a brief description and its role in the story.</p>
+      <ol>
+        <li>
+          <strong>The Golden City (Pocket Dimension):</strong> The original sanctuary created by Tsuki, home to Aurelia and Selene. Site of the first rebellion and the ejection of the gods into the wider cosmos.
+        </li>
+        <li>
+          <strong>The Wider Cosmos / Mortal Realms:</strong> Where the ejected denizens of the Golden City become gods of the mortal worlds.
+        </li>
+        <li>
+          <strong>The Pocket Dimension (Eldricus's Exile):</strong> Eldricus's place of refuge after the Great Battle against the Twelve Rebellious Gods led by Sucirdle, and the site of Seraphia's creation. Time flows differently here.
+        </li>
+        <li>
+          <strong>Seraphia (New World):</strong> The world created by Eldricus as a reimagined Golden City, home to mortals and immortals unaware of their true origins.
+        </li>
+        <li>
+          <strong>Mogo:</strong> A key early campaign location. Site of the well, the guardian horse Epona, and the first library outpost established with the players' involvement. Also the place where Pete dies and Rowan gains immortality.
+        </li>
+        <li>
+          <strong>Tolucaville (Mician Village):</strong> Village of the Mician, where Biggus gains immortality and Yo has a notorious dislike for the locals.
+        </li>
+        <li>
+          <strong>Dragon Village of Westeros:</strong> Home of Ziggy and his family, and the site of several party side quests.
+        </li>
+        <li>
+          <strong>The Loom of Souls:</strong> A mysterious realm where the party meets Feren Dax and frees Tsuki. Major story arc location.
+        </li>
+        <li>
+          <strong>Library Outpost (in Mogo):</strong> The party's base of operations, constructed after finding a suitable location in Mogo.
+        </li>
+        <li>
+          <strong>School in the Pocket Dimension:</strong> Place of study and rest for the party between adventures.
+        </li>
+        <li>
+          <strong>Top of the World (Portal):</strong> The highest point, containing a portal used by the party to travel to Feren Dax's hometown.
+        </li>
+        <li>
+          <strong>Wastelands/Desert:</strong> The harsh region the party crosses on their journey to Yusaf'hed.
+        </li>
+        <li>
+          <strong>Yusaf'hed (Feren Dax's Hometown):</strong> The city of pride and pleasure, home to the Silken Phoenix. Central to Feren Dax's story.
+        </li>
+        <li>
+          <strong>Palace = Sol, Temple = Luna:</strong> The homes of the Aurelia (Sol) and Selene (Luna), originally from the Golden City. These sacred sites in The Golden City represent the legacy and power of Aurelia (Sun) and Selene (Moon), and are central to the city's spiritual life.
+        </li>
+        <li>
+          <strong>The World (Post-Pocket Dimension):</strong> The changed world after the shattering of the pocket dimension, with new settlements and a new era for Milicia's people.
+        </li>
+      </ol>
     </section>
   </main>
   <footer>
