Restore point before adding detailed HTML comments to all major sections

--- a/html/characters.html
+++ b/html/characters.html
@@ -5,6 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Characters</title>
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="icon" href="../assets/icons/favicon.ico">
+  <style>
+    body {
+      background: url('../assets/images/CoverArt.png') no-repeat center 10px fixed;
+      background-size: 80% auto;
+      background-repeat: no-repeat;
+      background-color: #f8f8f8;
+    }
+    header {
+      background: rgba(255,255,255,0.75);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+    }
+    main {
+      background: rgba(255,255,255,0.00);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+    }
+    h2 {
+      text-align: center;
+      color: #000000;
+      font-size: 2.2rem;
+      font-weight: bold;
+      text-shadow: 0 3px 8px rgba(245, 243, 243, 0.22);
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+    footer {
+      background: rgba(255,255,255,0.75);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+      color: #000;
+    }
+    header h1 {
+      text-align: center;
+      color: #b22222;
+      font-size: 2.1rem;
+      font-weight: bold;
+      margin-top: 1.2rem;
+      margin-bottom: 1.2rem;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.10);
+    }
+    nav a {
+      color: #b22222;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -27,7 +87,7 @@
       <h2>Player Characters</h2>
       <div class="character-grid">
         <div class="character-row">
-          <a class="character-card" href="biggus-menethil.html">
+          <a class="character-card" href="biggus-menethil.html" style="background:#23272e; color:#fff; text-shadow:2px 2px 8px #000000, 0 2px 8px #b22222;">
             <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="192" height="192">
             <div>
               <strong>Biggus Menethil</strong><br>
@@ -40,7 +100,7 @@
               
             </div>
           </a>
-          <a class="character-card" href="milicia-valen.html">
+          <a class="character-card" href="milicia-valen.html" style="background:#2e2323; color:#fff8e1; text-shadow:2px 2px 8px #000000, 0 2px 8px #8b4513;">
             <img src="../assets/images/Milicia.png" alt="Milicia Valen" width="192" height="192">
             <div>
               <strong>Milicia Valen</strong><br>
@@ -61,7 +121,7 @@
           </a>
         </div>
         <div class="character-row">
-          <a class="character-card" href="feren-dax.html">
+          <a class="character-card" href="feren-dax.html" style="background:#2e2332; color:#e0d0ff; text-shadow:2px 2px 8px #000000, 0 2px 8px #483d8b;">
             <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="192" height="192">
             <div>
               <strong>Feren Dax</strong><br>
@@ -74,7 +134,7 @@
               
             </div>
           </a>
-          <a class="character-card" href="yo.html">
+          <a class="character-card" href="yo.html" style="background:#23322e; color:#e0ffe0; text-shadow:2px 2px 8px #000000, 0 2px 8px #006400;">
             <img src="../assets/images/Yo.png" alt="Yo" width="192" height="192">
             <div>
               <strong>Yo</strong><br>
@@ -95,10 +155,11 @@
     </section>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
-  <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
-    Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
-  </p>
+    <p style="font-size:1.1em; color:#b22222; margin-top:-1em; text-align:center; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">
+      &copy; 2025 D&D Campaign Reference; Ruleset: D&D 5e (2014 version)<br>
+      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. <br>
+      This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
