--- a/html/locations.html
+++ b/html/locations.html
@@ -77,10 +77,25 @@
   </main>
   <footer>
     <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
-    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
-      Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
-    </p>
-  </footer>
+    <section style="max-width:700px; margin:2rem auto;">
+      <h3 style="text-align:center; color: #ff0000; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Quick Links</h3>
+      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width:600px; margin:0 auto;">
+        <a class="character-card" href="characters.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000006e;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Characters</a>
+        <a class="character-card" href="important-npcs.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000082;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Important NPCs</a>
+        <a class="character-card" href="locations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000083;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Locations</a>
+        <a class="character-card" href="lore-books.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000007f;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Lore Books</a>
+        <a class="character-card" href="house-rules.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">House Rules</a>
+        <a class="character-card" href="organizations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Organizations</a>
+        <a class="character-card" href="session-notes.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000071; text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Session Notes</a>
+      </div>
+    </section>
+    <footer>
+      <p style="font-size:1.1em; color:#b22222; margin-top:-1em; text-align:center; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">
+        &copy; 2025 D&D Campaign Reference; Ruleset: D&D 5e (2014 version)<br>
+        Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. <br>
+        This is a fan site for personal use. All rights reserved.
+      </p>
+    </footer>
   <script src="../js/main.js"></script>
 </body>
 </html>
