--- a/html/test.html
+++ b/html/test.html
@@ -271,33 +271,30 @@
     </section>
    
 
-    <!-- ================= FOOTER ================= -->
-    <footer
-      style="
-        background: rgba(212, 21, 21, 0);
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
-        margin: 1.5rem auto;
-        max-width: 900px;
-        padding: 1rem 2rem;
-        flex-shrink: 0;
-      "
-    >
-      <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
-        <p
-          style="
-            font-size:1.1em;
-            color:#000000;
-            margin-top:-0em;
-            text-align:center;
-            text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
-            margin-bottom: 0.2em;
-          "
-        >
-          &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
-          Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
-          This is a fan site for personal use. All rights reserved.
-        </p>
-      </div>
-  </body>
-  </html>
+  <!-- ================= FOOTER ================= -->
+  <footer
+    style="
+      background: rgba(255,255,255,0.00);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+    "
+  >
+    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px #0002; padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: 700px; background: rgba(240,240,240,0.15);">
+      <p
+        style="
+          font-size:1.1em;
+          color:#000000;
+          margin-top:-0em;
+          text-align:center;
+          text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+          margin-bottom: 0.2em;
+        "
+      >
+        &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+        Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+        This is a fan site for personal use. All rights reserved.
+      </p>
+    </div>
